--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "NODE_ENV=development node server.js",
-    "build" : "NODE_ENV=production BABEL_ENV=production webpack --progress --config webpack.config.js"
+    "start": "NODE_ENV=development node server.js",
+    "build": "NODE_ENV=production BABEL_ENV=production webpack --progress --config webpack.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kopkong/webpack2-react-boilerplate.git"
   },
-  "keywords": ["webpack2", "express", "react"],
+  "keywords": [
+    "webpack2",
+    "express",
+    "react"
+  ],
   "author": "klk",
   "license": "ISC",
   "bugs": {
@@ -27,6 +31,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "eslint": "^4.0.0",
